# dqi-lm

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml  config_deepseek-r1-distill-llama-70b-bnb-4bit.yaml  config_gemma3-12b-it.yaml  config_gpt-oss-20b-bf16.yaml  config_llama3.1-8b-instruct-bnb-4bit.yaml  config_llama3.1-8b-instruct.yaml  config_mistral-7b-instruct-v0.3-bnb-4bit.yaml  config_mistral-7b-instruct-v0.3.yaml  config_mistral-small-3.2-24b.yaml  config_test.yaml  verification.yaml
notebooks/: demo-ollama.ipynb  demo.ipynb  publish.ipynb
scripts/: data_prep.py  evaluate.py  evaluate_weave.py  merge_us_debate_data.py  publish.py  split_dataset.py  train.py
slurm/: array_configs.txt  launch_data_prep.sh  launch_eval.sh  launch_eval_array.sh  launch_jupyter.sh  launch_train.sh  launch_train_array.sh
