[project]
name = "dqi-lm"
version = "0.1.0"
description = "Language Model for Discourse Quality Indexing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "trl>=0.24.0",
    "unsloth>=2025.12.5",
    "wandb>=0.23.1",
    "weave>=0.52.22",
]
